--- a/Project_WebDev/pages/HD/Pulau Tegal Mas.html
+++ b/Project_WebDev/pages/HD/Pulau Tegal Mas.html
@@ -78,15 +78,11 @@
                         <a class="badge bg-secondary text-decoration-none link-light" href="../Hot_Destination.html">Destination</a>
                     </header>
                     <!-- Preview image figure-->
-                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Pulau Tegal Mas.jpeg" alt="..." /></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Pulau Tegal Mas.jpeg" width="700px" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-                        <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
-                        <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-                        <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
-                        <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-                        <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
+                        <p class="fs-5 mb-4">Pulau Tegal Mas merupakan sebuah kawasan wisata yang terletak di Pulau Tegal, Kecamatan Teluk Pandan, Kabupaten Pesawaran, Lampung. Banyak yang menyebutnya mirip dengan Maladewa, karena eksotisme alam & penginapan terapung yang ada di sekelilingnya. Pulau Tegal Mas seolah telah menjadi magnet yang memikat hati para wisatawan sejak perkembangan akhirnya pada tahun 2017. Tak sebatas turis domestik, destinasi wisata yang berdiri di atas lahan seluas 113 Ha ini juga mulai dilirik oleh wisatawan dari berbagai negara. </p>
+                        <p class="fs-5 mb-4">Kekayaan biodiversitas yang dimiliki Pulau Tegal Mas, terutama alam bawah lautnya, dinilai tak kalah dengan lokasi lain di Indonesia. Sangat cocok untuk dieksplor setiap orang yang gemar melakukan aktivitas snorkeling atau diving. Disini wisatawan akan dimanjakan dengan keindahan berbagai biota laut, mulai dari terumbu karang, anemon, hingga berbagai jenis ikan yang menjadi penghuninya. Sebagai sarana penunjang, tersedia pula dive center serta snorkeling center yang bisa dimanfaatkan pengunjung untuk informasi dan penyediaan peralatan penyelaman. </p>
                     </section>
                 </article>
             </div>
