--- a/Project_WebDev/pages/LC/Tempoyang.html
+++ b/Project_WebDev/pages/LC/Tempoyang.html
@@ -73,23 +73,20 @@
                     <!-- Post header-->
                     <header class="mb-4">
                         <!-- Post title-->
-                        <h1 class="fw-bolder mb-1">Seruit</h1>>
+                        <h1 class="fw-bolder mb-1">Tempoyang</h1>>
                         <!-- Post categories-->
                         <a class="badge bg-secondary text-decoration-none link-light" href="../Local_Cuisine.html">Cuisine</a>
                     </header>
                     <!-- Preview image figure-->
-                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Seruit.jpg" width="700px" alt="..." /></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Tempoyang.jpg" width="700px" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">Seruit, kuliner khas Lampung yang satu ini kurang populer dan jarang terdengar. Namun bagi masyarakat Lampung, Seruit termasuk kuliner yang cukup populer. Bahan baku utama dalam pembuatan Seruit adalah ikan, jenis ikannya tidak ditentukan. Tergantung selera masing-masing saja.</p>
-                        <p class="fs-5 mb-4">Namun biasanya masyarakat Lampung memakai ikan sungai, seperti ikan Baung, Layis, belide, dan lain-lain. Dan disajikan dengan lalapan. Sekilas tidak ada yang istimewa dari kuliner khas Lampung yang satu ini. Tapi hingga saat ini seruit masih dijadikan menu utama yang disajikan saat berkumpul, khususnya bagi suku Lampung Pepadun. </p>
-                        <p class="fs-5 mb-4">Sejak zaman dulu, masyarakat Lampung suka sekali berkumpul dengan keluarga, saudara, kerabat dan tetangga. Entah itu di acara adat, acara keagamaan, ataupun pernikahan. Dan disaat berkumpul itu, mereka biasanya menyantap makanan secara bersama-sama.
-                          Tradisi ini disebut dengan Nyeruit, dan makanan yang disantapnya adalah Seruit. Walaupun zaman sudah modern, namun kegiatan berkumpul ini masih dilakukan secara turun temurun hingga saat ini. Dan merupakan sarana untuk menjaga tali silaturahmi.</p>
-                        <h2 class="fw-bolder mb-4 mt-5">Proses pembuatan Seruit sangatlah mudah</h2>
-                        <p class="fs-5 mb-4">Kuliner khas Lampung ini memiliki bahan dasar ikan, dan biasanya ikan yang disajikan dalam Seruit diolah dengan cara digoreng atau dibakar. Selanjutnya ikan akan disantap dengan sambal terasi dan sambal tempoyak (olahan durian) atau sambal mangga.
-                          Masyarakat Lampung juga sering menambahkan lalapan dan petai, sebagai pelengkap hidangan Seruit. Perpaduan rasa dari sambal terasi dan sambal tempoyak atau sambal mangga, memberikan cita rasa pedas, asam, dan manis yang menambah kenikmatan saat menyantap Seruit.</p>
-                        <p class="fs-5 mb-4">Makanan ini kelihatan memang sangat sederhana kelihatannya, dan proses pembuatannya pun tidaklah rumit. Sebelum digoreng, ikan akan dilumuri dulu dengan bawang putih, garam, ketumbar, kunyit, dan jahe yang sudah dihaluskan. Setelah bumbu meresap, barulah ikan tersebut digoreng.
-                          Kalau ikannya dibakar, saat sudah setengah matang ikan akan dioles dengan kecap dan campuran bumbu yang dihaluskan tadi. kemudian dibakar lagi hingga matang. Kemudian ikan yang sudah dibakar ataupun digoreng, akan disajikan bersama dengan sepiring nasi hangat, dan aneka jenis lalapan yang diaduk jadi satu dengan sambal.</p>
+                        <p class="fs-5 mb-4">Di beberapa tempat lain di Sumatra, orang-orang menyebutnya tempoyak. Tempoyang adalah durian yang difermentasi yang memiliki rasa yang sangat asam.</p>
+                        <p class="fs-5 mb-4">Makanan khas Lampung ini sangat popular. Tempoyak bahan dasarnya adalah durian yang sudah difermentasikan. Untuk membuat tempoyak yang lezat, harus menggunakan durian dengan kualitas yang baik dan benar-benar matang.</p>
+                        <p class="fs-5 mb-4">Fermentasi dilakukan selama 2 hingga dengan 5 hari, setelah daging buah durian ditambahkan dengan garam dan cabe rawit di lemari pendingin. Hal itu dilakukan untuk mempercepat prosesnya. Kemudian, hasil fermentasinya biasanya dijadikan sebagai bahan pembuat sambal, dengan cara ditambah campuran bawang merah, bawang putih, dan juga cabai merah, serta cabai rawit halus.</p>
+                        <h2 class="fw-bolder mb-4 mt-5">Cara pembuatan Tempoyang</h2>
+                        <p class="fs-5 mb-4">Pisahkan antara biji dengan daging durian, lalu diberi sedikit garam. Tambahkan cabai rawit secukupnya. Kemudian simpan di tempat yang tertutup atau bisa dimasukkan ke dalam kulkas untuk mempercepat proses fermentasi Tempoyak. Apabila sudah difermentasikan selama dua sampai lima hari, segera olah dengan campuran ikan mujair, teri, mas atau lainnya.</p>
+                        <p class="fs-5 mb-4">Sebenarnya, tempoyang dapat dimakan langsung, namun banyak orang yang tidak tahan dengan aromanya yang berasal dari rasa asam hasil fermentasi. Beberapa orang mengkonsumsi tempoyang apa adanya. Kuliner tempoyang atau tempoyak ini juga terkenal di beberapa daerah luar Lampung dan Sumatra seperti Kalimantan, Jawa, dan bahkan di daerah Malaysia.</p>
                     </section>
                 </article>
             </div>
