--- a/Project_WebDev/pages/LE/Lampung Walk.html
+++ b/Project_WebDev/pages/LE/Lampung Walk.html
@@ -31,10 +31,10 @@
               <a class="nav-link fs-4" href="../Hot_Destination.html">Destination</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Local_Cuisine.html">Cuisine</a>
+                <a class="nav-link fs-4" href="../Local_Cuisine.html">Cuisine</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-4" href="../Local_Entertainment.html">Entertainment</a>
+                <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Local_Entertainment.html">Entertainment</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fs-4" href="../Lodging.html">Lodging</a>
@@ -73,23 +73,19 @@
                     <!-- Post header-->
                     <header class="mb-4">
                         <!-- Post title-->
-                        <h1 class="fw-bolder mb-1">Seruit</h1>>
+                        <h1 class="fw-bolder mb-1">Lampung Walk</h1>>
                         <!-- Post categories-->
-                        <a class="badge bg-secondary text-decoration-none link-light" href="../Local_Cuisine.html">Cuisine</a>
+                        <a class="badge bg-secondary text-decoration-none link-light" href="../Local_Entertainment.html">Entertainment</a>
                     </header>
                     <!-- Preview image figure-->
-                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Seruit.jpg" width="700px" alt="..." /></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Waterpark-Lampung-Walk.-Foto-Gmap-Rizki-Adhi-Wijaya.jpg" width="700px" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">Seruit, kuliner khas Lampung yang satu ini kurang populer dan jarang terdengar. Namun bagi masyarakat Lampung, Seruit termasuk kuliner yang cukup populer. Bahan baku utama dalam pembuatan Seruit adalah ikan, jenis ikannya tidak ditentukan. Tergantung selera masing-masing saja.</p>
-                        <p class="fs-5 mb-4">Namun biasanya masyarakat Lampung memakai ikan sungai, seperti ikan Baung, Layis, belide, dan lain-lain. Dan disajikan dengan lalapan. Sekilas tidak ada yang istimewa dari kuliner khas Lampung yang satu ini. Tapi hingga saat ini seruit masih dijadikan menu utama yang disajikan saat berkumpul, khususnya bagi suku Lampung Pepadun. </p>
-                        <p class="fs-5 mb-4">Sejak zaman dulu, masyarakat Lampung suka sekali berkumpul dengan keluarga, saudara, kerabat dan tetangga. Entah itu di acara adat, acara keagamaan, ataupun pernikahan. Dan disaat berkumpul itu, mereka biasanya menyantap makanan secara bersama-sama.
-                          Tradisi ini disebut dengan Nyeruit, dan makanan yang disantapnya adalah Seruit. Walaupun zaman sudah modern, namun kegiatan berkumpul ini masih dilakukan secara turun temurun hingga saat ini. Dan merupakan sarana untuk menjaga tali silaturahmi.</p>
-                        <h2 class="fw-bolder mb-4 mt-5">Proses pembuatan Seruit sangatlah mudah</h2>
-                        <p class="fs-5 mb-4">Kuliner khas Lampung ini memiliki bahan dasar ikan, dan biasanya ikan yang disajikan dalam Seruit diolah dengan cara digoreng atau dibakar. Selanjutnya ikan akan disantap dengan sambal terasi dan sambal tempoyak (olahan durian) atau sambal mangga.
-                          Masyarakat Lampung juga sering menambahkan lalapan dan petai, sebagai pelengkap hidangan Seruit. Perpaduan rasa dari sambal terasi dan sambal tempoyak atau sambal mangga, memberikan cita rasa pedas, asam, dan manis yang menambah kenikmatan saat menyantap Seruit.</p>
-                        <p class="fs-5 mb-4">Makanan ini kelihatan memang sangat sederhana kelihatannya, dan proses pembuatannya pun tidaklah rumit. Sebelum digoreng, ikan akan dilumuri dulu dengan bawang putih, garam, ketumbar, kunyit, dan jahe yang sudah dihaluskan. Setelah bumbu meresap, barulah ikan tersebut digoreng.
-                          Kalau ikannya dibakar, saat sudah setengah matang ikan akan dioles dengan kecap dan campuran bumbu yang dihaluskan tadi. kemudian dibakar lagi hingga matang. Kemudian ikan yang sudah dibakar ataupun digoreng, akan disajikan bersama dengan sepiring nasi hangat, dan aneka jenis lalapan yang diaduk jadi satu dengan sambal.</p>
+                        <p class="fs-5 mb-4">Lampung Walk semakin menambah khazanah tempat wisata Lampung yang cocok sebagai objek wisata keluarga di saat liburan tiba. Area spot foto 3 dimensi Lampung Walk menjadi penegasan akan hal tersebut. Bahkan bisa dibilang sebagai salah – satu spot foto 3 dimensi pertama yang ada di Lampung. Namun, Lampung Walk bukan hanya sekedar berbicara tentang spot foto saja.</p>
+                        <p class="fs-5 mb-4">Sebagai tempat One Stop Family Entertainment di Bandar Lampung, yang artinya adalah Lampung Walk merupakan gabungan konsep wisata dengan hiburan, kuliner dan olahraga.
+                          Konsep wisata kekinian lebih ditonjolkan disini, sehingga untuk kaum Milenial sangat tepat sasaran. Menyasar kalangan yang melek teknologi untuk berbagi di sosial media menjadi Wisata Lampung Walk mudah populer di Lampung.
+                          Disana dapat menikmati liburan sambil berolahraga, jadi pengunjung tidak bosan dan terlebih banyak fasilitas yang ditawarkan. Seperti apa wahana, fasilitas yang ada disana serta berapa harga tiket masuknya? Simak secara seksama, kita kupas tuntas untuk anda.</p>
+                        <p class="fs-5 mb-4">Lampung Walk adalah tempat wisata yang memadukan konsep wisata alam terbuka, yang dikolaborasikan dalam satu kawasan yang sama dengan area olah raga, Water Boom, dan area food court untuk menikmati wisata kuliner di Lampung. Di sini juga ada Els Coffee, tempat ngopi anak muda di Bandar Lampung, asli punya orang Lampung dan kopinya asli kopi Lampung. </p>
                     </section>
                 </article>
             </div>
