--- a/Project_WebDev/pages/LE/Puncak Mas.html
+++ b/Project_WebDev/pages/LE/Puncak Mas.html
@@ -31,10 +31,10 @@
               <a class="nav-link fs-4" href="../Hot_Destination.html">Destination</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Local_Cuisine.html">Cuisine</a>
+                <a class="nav-link fs-4" href="../Local_Cuisine.html">Cuisine</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-4" href="../Local_Entertainment.html">Entertainment</a>
+                <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Local_Entertainment.html">Entertainment</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fs-4" href="../Lodging.html">Lodging</a>
@@ -73,23 +73,24 @@
                     <!-- Post header-->
                     <header class="mb-4">
                         <!-- Post title-->
-                        <h1 class="fw-bolder mb-1">Seruit</h1>>
+                        <h1 class="fw-bolder mb-1">Puncak Mas</h1>>
                         <!-- Post categories-->
-                        <a class="badge bg-secondary text-decoration-none link-light" href="../Local_Cuisine.html">Cuisine</a>
+                        <a class="badge bg-secondary text-decoration-none link-light" href="../Local_Entertainment.html">Entertainment</a>
                     </header>
                     <!-- Preview image figure-->
-                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Seruit.jpg" width="700px" alt="..." /></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/puncak-mas-lampung.jpg" width="700px" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">Seruit, kuliner khas Lampung yang satu ini kurang populer dan jarang terdengar. Namun bagi masyarakat Lampung, Seruit termasuk kuliner yang cukup populer. Bahan baku utama dalam pembuatan Seruit adalah ikan, jenis ikannya tidak ditentukan. Tergantung selera masing-masing saja.</p>
-                        <p class="fs-5 mb-4">Namun biasanya masyarakat Lampung memakai ikan sungai, seperti ikan Baung, Layis, belide, dan lain-lain. Dan disajikan dengan lalapan. Sekilas tidak ada yang istimewa dari kuliner khas Lampung yang satu ini. Tapi hingga saat ini seruit masih dijadikan menu utama yang disajikan saat berkumpul, khususnya bagi suku Lampung Pepadun. </p>
-                        <p class="fs-5 mb-4">Sejak zaman dulu, masyarakat Lampung suka sekali berkumpul dengan keluarga, saudara, kerabat dan tetangga. Entah itu di acara adat, acara keagamaan, ataupun pernikahan. Dan disaat berkumpul itu, mereka biasanya menyantap makanan secara bersama-sama.
-                          Tradisi ini disebut dengan Nyeruit, dan makanan yang disantapnya adalah Seruit. Walaupun zaman sudah modern, namun kegiatan berkumpul ini masih dilakukan secara turun temurun hingga saat ini. Dan merupakan sarana untuk menjaga tali silaturahmi.</p>
-                        <h2 class="fw-bolder mb-4 mt-5">Proses pembuatan Seruit sangatlah mudah</h2>
-                        <p class="fs-5 mb-4">Kuliner khas Lampung ini memiliki bahan dasar ikan, dan biasanya ikan yang disajikan dalam Seruit diolah dengan cara digoreng atau dibakar. Selanjutnya ikan akan disantap dengan sambal terasi dan sambal tempoyak (olahan durian) atau sambal mangga.
-                          Masyarakat Lampung juga sering menambahkan lalapan dan petai, sebagai pelengkap hidangan Seruit. Perpaduan rasa dari sambal terasi dan sambal tempoyak atau sambal mangga, memberikan cita rasa pedas, asam, dan manis yang menambah kenikmatan saat menyantap Seruit.</p>
-                        <p class="fs-5 mb-4">Makanan ini kelihatan memang sangat sederhana kelihatannya, dan proses pembuatannya pun tidaklah rumit. Sebelum digoreng, ikan akan dilumuri dulu dengan bawang putih, garam, ketumbar, kunyit, dan jahe yang sudah dihaluskan. Setelah bumbu meresap, barulah ikan tersebut digoreng.
-                          Kalau ikannya dibakar, saat sudah setengah matang ikan akan dioles dengan kecap dan campuran bumbu yang dihaluskan tadi. kemudian dibakar lagi hingga matang. Kemudian ikan yang sudah dibakar ataupun digoreng, akan disajikan bersama dengan sepiring nasi hangat, dan aneka jenis lalapan yang diaduk jadi satu dengan sambal.</p>
+                        <p class="fs-5 mb-4">Puncak Mas Lampung menjadi pilihan terbaik bagi mereka yang sedang bingung mencari tempat hiburan di Lampung. Banyaknya kunjungan wisata ke Puncak Mas Lampung dikarenakan lokasinya berada di sebuah bukit, serta memiliki area yang tertata dengan baik, sehingga tersaji sebuah taman instagramable di atas ketinggian Kota Bandar Lampung. Selain itu, semua yang dibutuhkan untuk menunjang kenyamanan wisata para pengunjung tersaji lengkap di Puncak Mas Lampung, termasuk cottage, atau penginapan.</p>
+                        <p class="fs-5 mb-4">Daya tarik yang pertama dari Puncak Mas Lampung adalah area utamanya berupa taman yang luas, yang tertata secara baik, serta memiliki konsep kekinian. Ada juga area food court, atau cafe yang menyajikan aneka macam makanan, dan minuman. Penataan cafe tersebut juga sangat baik, dan akan membuat nyaman pengunjung yang datang. Udara yang sejuk, suasana yang tenang, view alam yang menawan, serta dilengkapi dengan fasilitas yang baik adalah kenikmatan saat berada di lokasi tersebut. </p>
+                        <p class="fs-5 mb-4">Puncak Mas Lampung Lokasinya yang terdapat di kawasan perbukitan. Kondisi geografis ini membuat Puncak Mas memiliki pemandangan alam yang menyegarkan mata yang bisa mendamaikan pikiran, hati dan juga jiwa.
+                            Wilayah Puncak Mas berupa perbukitan, sehingga sangat cocok dikembangkan dengan spot wisata berupa gardu pandang seperti wisata dataran tinggi pada umumnya. Dari atas ketinggian Puncak Mas ini pengunjung dapat menikmati view perkotaan, pegunungan dan juga laut.
+                            Terdapat sebuah rumah pohon untuk menikmati keindahan kota Lampung dari ketinggian. Rumah pohon ini yang menjadi incaran oleh kalangan anak muda yang suka selfie.</p>
+                        <h2 class="fw-bolder mb-4 mt-5">Romansa Malam Hari di Puncak Mas</h2>
+                        <p class="fs-5 mb-4">Waktu terbaik saat berada di Puncak Mas yaitu malam hari. Pada malam hari, pengunjung dapat melihat keindahan panorama. Keindahan berupa perpaduan antara kota Bandar Lampung yang bagaikan lautan kunang-kunang serta langit lepas yang dihiasi ribuan bintang. Apalagi jika di bulan purnama ditambah dengan teduh sinar bulan.
+                            Pemandangan pada siang hari pun juga tak kalah cantik. Sebab dibangun outdoor, jadi pastikan kamu mengunjungi tempat wisata baru ini pada saat sedang tidak hujan.</p>
+                        <p class="fs-5 mb-4">Bagi wisatawan yang menyukai wahana pemacu adrenalin, Sepeda Gantung telah hadir di sini. Seluruh anggota keluarga diharapkan bisa menikmati liburan di tempat ini. Mulai dari anak kecil, anak remaja, hingga orang dewasa.                            
+                            Selain rumah pohon dan berbagai wahana yang ditujukan untuk pengunjung muda dan dewasa, terdapat pula taman untuk berekreasi. Taman rekreasi ini didesain sebagai taman bermain untuk anak-anak. Taman sudah lengkap dengan berbagai permainan yang aman dan tentu saja seru.</p>
                     </section>
                 </article>
             </div>
