--- a/Project_WebDev/pages/LO/Sheraton Hotel.html
+++ b/Project_WebDev/pages/LO/Sheraton Hotel.html
@@ -31,13 +31,13 @@
               <a class="nav-link fs-4" href="../Hot_Destination.html">Destination</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Local_Cuisine.html">Cuisine</a>
+                <a class="nav-link fs-4" href="../Local_Cuisine.html">Cuisine</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-4" href="../Local_Entertainment.html">Entertainment</a>
+                <a class="nav-link fs-4" href="../Local_Entertainment.html">Entertainment</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-4" href="../Lodging.html">Lodging</a>
+                <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Lodging.html">Lodging</a>
             </li>
           </ul>
           <div class="nav-item dropdown" style="padding-left: 100px;">
@@ -73,23 +73,19 @@
                     <!-- Post header-->
                     <header class="mb-4">
                         <!-- Post title-->
-                        <h1 class="fw-bolder mb-1">Seruit</h1>>
+                        <h1 class="fw-bolder mb-1">Sheraton Lampung Hotel</h1>>
                         <!-- Post categories-->
-                        <a class="badge bg-secondary text-decoration-none link-light" href="../Local_Cuisine.html">Cuisine</a>
+                        <a class="badge bg-secondary text-decoration-none link-light" href="../Lodging.html">Lodging</a>
                     </header>
                     <!-- Preview image figure-->
-                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Seruit.jpg" width="700px" alt="..." /></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Sheraton Lampung Hotel.jpeg" width="700px" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">Seruit, kuliner khas Lampung yang satu ini kurang populer dan jarang terdengar. Namun bagi masyarakat Lampung, Seruit termasuk kuliner yang cukup populer. Bahan baku utama dalam pembuatan Seruit adalah ikan, jenis ikannya tidak ditentukan. Tergantung selera masing-masing saja.</p>
-                        <p class="fs-5 mb-4">Namun biasanya masyarakat Lampung memakai ikan sungai, seperti ikan Baung, Layis, belide, dan lain-lain. Dan disajikan dengan lalapan. Sekilas tidak ada yang istimewa dari kuliner khas Lampung yang satu ini. Tapi hingga saat ini seruit masih dijadikan menu utama yang disajikan saat berkumpul, khususnya bagi suku Lampung Pepadun. </p>
-                        <p class="fs-5 mb-4">Sejak zaman dulu, masyarakat Lampung suka sekali berkumpul dengan keluarga, saudara, kerabat dan tetangga. Entah itu di acara adat, acara keagamaan, ataupun pernikahan. Dan disaat berkumpul itu, mereka biasanya menyantap makanan secara bersama-sama.
-                          Tradisi ini disebut dengan Nyeruit, dan makanan yang disantapnya adalah Seruit. Walaupun zaman sudah modern, namun kegiatan berkumpul ini masih dilakukan secara turun temurun hingga saat ini. Dan merupakan sarana untuk menjaga tali silaturahmi.</p>
-                        <h2 class="fw-bolder mb-4 mt-5">Proses pembuatan Seruit sangatlah mudah</h2>
-                        <p class="fs-5 mb-4">Kuliner khas Lampung ini memiliki bahan dasar ikan, dan biasanya ikan yang disajikan dalam Seruit diolah dengan cara digoreng atau dibakar. Selanjutnya ikan akan disantap dengan sambal terasi dan sambal tempoyak (olahan durian) atau sambal mangga.
-                          Masyarakat Lampung juga sering menambahkan lalapan dan petai, sebagai pelengkap hidangan Seruit. Perpaduan rasa dari sambal terasi dan sambal tempoyak atau sambal mangga, memberikan cita rasa pedas, asam, dan manis yang menambah kenikmatan saat menyantap Seruit.</p>
-                        <p class="fs-5 mb-4">Makanan ini kelihatan memang sangat sederhana kelihatannya, dan proses pembuatannya pun tidaklah rumit. Sebelum digoreng, ikan akan dilumuri dulu dengan bawang putih, garam, ketumbar, kunyit, dan jahe yang sudah dihaluskan. Setelah bumbu meresap, barulah ikan tersebut digoreng.
-                          Kalau ikannya dibakar, saat sudah setengah matang ikan akan dioles dengan kecap dan campuran bumbu yang dihaluskan tadi. kemudian dibakar lagi hingga matang. Kemudian ikan yang sudah dibakar ataupun digoreng, akan disajikan bersama dengan sepiring nasi hangat, dan aneka jenis lalapan yang diaduk jadi satu dengan sambal.</p>
+                        <p class="fs-5 mb-4">Hotel dan pusat konferensi kelas atas yang terletak di kawasan bisnis kota ini berjarak 4 km dari stasiun kereta Tanjung Karang dan 3 km dari tempat berbelanja di Mal Kartini.</p>
+                        <p class="fs-5 mb-4">Sheraton Lampung Hotel menyambut Anda ke Indonesia dengan layanan yang mudah dan lingkungan yang modern dan ramping. Terletak di Bandar Lampung, hotel kami menawarkan akomodasi modern dengan balkon atau teras pribadi yang menawarkan pemandangan kolam renang atau taman yang menakjubkan. Fasilitasnya termasuk Wi-Fi gratis, fasilitas membuat kopi/teh, dan minibar. Bagi mereka yang ingin menyelenggarakan pertemuan bisnis atau acara sosial di Bandar Lampung, hotel kami memiliki serangkaian ruang yang fleksibel dan inspiratif, lengkap dengan teknologi cerdas dan layanan perencanaan dan katering yang dipesan lebih dahulu.</p>
+                        <h2 class="fw-bolder mb-4 mt-5">Waktu Menginap Anda Terjamin di Sheraton Lampung Hotel</h2>
+                        <p class="fs-5 mb-4"> Kamar-kamar bernuansa santai dilengkapi dengan Wi-Fi gratis, TV layar datar, minibar, serta pembuat teh dan kopi. Beberapa kamar memiliki pemandangan kolam renang atau taman. Room service tersedia 24 jam. Tersedia tempat parkir gratis. Terdapat restoran yang menyajikan hidangan internasional, kedai kopi/toko roti, bar lobi, dan teras. </p>
+                        <p class="fs-5 mb-4">Para tamu dapat memilih dari berbagai pilihan makanan internasional dan lokal, dari layanan kamar 24 jam hingga restoran di tepi kolam renang. Selain kolam renang luar ruangan yang tenang, fasilitas rekreasi di hotel ini termasuk pusat kebugaran, jalur joging, dan lapangan tenis. Terletak di pusat Bandar Lampung, hotel kami adalah lokasi yang bagus untuk menjelajahi daerah sekitarnya. Fasilitas lainnya termasuk kolam renang outdoor dengan bak mandi air panas, serta gym, dan lapangan tenis dengan penerangan. Business center dan ruang konferensi juga tersedia. Sarapan dikenakan biaya tambahan.</p>
                     </section>
                 </article>
             </div>
