--- a/Project_WebDev/pages/LO/Swiss-Belhotel.html
+++ b/Project_WebDev/pages/LO/Swiss-Belhotel.html
@@ -31,13 +31,13 @@
               <a class="nav-link fs-4" href="../Hot_Destination.html">Destination</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Local_Cuisine.html">Cuisine</a>
+                <a class="nav-link fs-4" href="../Local_Cuisine.html">Cuisine</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-4" href="../Local_Entertainment.html">Entertainment</a>
+                <a class="nav-link fs-4" href="../Local_Entertainment.html">Entertainment</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-4" href="../Lodging.html">Lodging</a>
+                <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Lodging.html">Lodging</a>
             </li>
           </ul>
           <div class="nav-item dropdown" style="padding-left: 100px;">
@@ -73,23 +73,20 @@
                     <!-- Post header-->
                     <header class="mb-4">
                         <!-- Post title-->
-                        <h1 class="fw-bolder mb-1">Seruit</h1>>
+                        <h1 class="fw-bolder mb-1">Swiss-Belhotel Lampung</h1>>
                         <!-- Post categories-->
-                        <a class="badge bg-secondary text-decoration-none link-light" href="../Local_Cuisine.html">Cuisine</a>
+                        <a class="badge bg-secondary text-decoration-none link-light" href="../Lodging.html">Lodging</a>
                     </header>
                     <!-- Preview image figure-->
-                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Seruit.jpg" width="700px" alt="..." /></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Swiss-Belhotel Lampung.jpg" width="700px" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">Seruit, kuliner khas Lampung yang satu ini kurang populer dan jarang terdengar. Namun bagi masyarakat Lampung, Seruit termasuk kuliner yang cukup populer. Bahan baku utama dalam pembuatan Seruit adalah ikan, jenis ikannya tidak ditentukan. Tergantung selera masing-masing saja.</p>
-                        <p class="fs-5 mb-4">Namun biasanya masyarakat Lampung memakai ikan sungai, seperti ikan Baung, Layis, belide, dan lain-lain. Dan disajikan dengan lalapan. Sekilas tidak ada yang istimewa dari kuliner khas Lampung yang satu ini. Tapi hingga saat ini seruit masih dijadikan menu utama yang disajikan saat berkumpul, khususnya bagi suku Lampung Pepadun. </p>
-                        <p class="fs-5 mb-4">Sejak zaman dulu, masyarakat Lampung suka sekali berkumpul dengan keluarga, saudara, kerabat dan tetangga. Entah itu di acara adat, acara keagamaan, ataupun pernikahan. Dan disaat berkumpul itu, mereka biasanya menyantap makanan secara bersama-sama.
-                          Tradisi ini disebut dengan Nyeruit, dan makanan yang disantapnya adalah Seruit. Walaupun zaman sudah modern, namun kegiatan berkumpul ini masih dilakukan secara turun temurun hingga saat ini. Dan merupakan sarana untuk menjaga tali silaturahmi.</p>
-                        <h2 class="fw-bolder mb-4 mt-5">Proses pembuatan Seruit sangatlah mudah</h2>
-                        <p class="fs-5 mb-4">Kuliner khas Lampung ini memiliki bahan dasar ikan, dan biasanya ikan yang disajikan dalam Seruit diolah dengan cara digoreng atau dibakar. Selanjutnya ikan akan disantap dengan sambal terasi dan sambal tempoyak (olahan durian) atau sambal mangga.
-                          Masyarakat Lampung juga sering menambahkan lalapan dan petai, sebagai pelengkap hidangan Seruit. Perpaduan rasa dari sambal terasi dan sambal tempoyak atau sambal mangga, memberikan cita rasa pedas, asam, dan manis yang menambah kenikmatan saat menyantap Seruit.</p>
-                        <p class="fs-5 mb-4">Makanan ini kelihatan memang sangat sederhana kelihatannya, dan proses pembuatannya pun tidaklah rumit. Sebelum digoreng, ikan akan dilumuri dulu dengan bawang putih, garam, ketumbar, kunyit, dan jahe yang sudah dihaluskan. Setelah bumbu meresap, barulah ikan tersebut digoreng.
-                          Kalau ikannya dibakar, saat sudah setengah matang ikan akan dioles dengan kecap dan campuran bumbu yang dihaluskan tadi. kemudian dibakar lagi hingga matang. Kemudian ikan yang sudah dibakar ataupun digoreng, akan disajikan bersama dengan sepiring nasi hangat, dan aneka jenis lalapan yang diaduk jadi satu dengan sambal.</p>
+                        <p class="fs-5 mb-4">Swiss-Belhotel Lampung adalah hotel bintang 4 bertaraf internasional di Lampung dengan pemandangan laut, bukit serta landscape kota Lampung yang indah. Hotel kelas atas yang mewah ini berjarak 4 km dari CitraGarden Waterpark dan 9 km dari Museum Lampung. </p>
+                        <p class="fs-5 mb-4"> Hotel ini menawarkan 167 kamar, mulai dari Kamar Deluxe hingga Kamar Presidential Suite yang mewah. Kamar elegan yang bernuansa hangat dilengkapi dengan Wi-Fi gratis, TV layar datar, alat pembuat kopi, serta brankas. Kamar di kelas yang lebih tinggi dan suite memiliki kulkas mini, area duduk, dan kamar tidur terpisah. Suite di kelas yang lebih tinggi dilengkapi dengan furnitur mewah, ruang keluarga dan ruang makan, serta jendela setinggi langit-langit. </p>
+                        <p class="fs-5 mb-4">Layanan antar-jemput bandara gratis disediakan. Terdapat kafe 24 jam di tepi kolam renang, bar modern 24 jam, dan restoran steak formal dengan pemandangan laut. Fasilitas lainnya meliputi kolam renang outdoor dan gym. </p>
+                        <h2 class="fw-bolder mb-4 mt-5">Pengalaman Kuliner Spesial di Swiss-Belhotel Lampung</h2>
+                        <p class="fs-5 mb-4">Untuk pengalaman bersantap yang istimewa di Lampung, hotel kami menawarkan beragam pilihan kuliner dengan hidangan lokal maupun internasional di Swiss-Cafe Restaurant. Beragam pilihan koktail, moktail dan makanan ringan tersedia sepanjang hari di The Lounge dan Bar.</p>
+                        <p class="fs-5 mb-4">Kami memberikan anda sesuatu yang pasti ingin Anda bagikan dengan orang yang anda cintai! Bancheese yang dibuat dengan penuh cinta oleh chef pastry kami dan spesial dari Swiss-Belhotel Lampung.</p>
                     </section>
                 </article>
             </div>
