--- a/Project_WebDev/pages/Local_Entertainment.html
+++ b/Project_WebDev/pages/Local_Entertainment.html
@@ -66,7 +66,7 @@
     </nav>
     <!--Isian-->
     <div class="list-group">
-      <a href="#" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
+      <a href="LE/Lembah Hijau.html" class="list-group-item list-group-item-action mx-0 mt-5" aria-current="true">
         <div class="row g-0">
           <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/lembah_hijau.jpg" height="300px" width="450px" class="rounded-3 "></div>
           <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
@@ -76,7 +76,7 @@
           </div>
          </div>
       </a>
-      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+      <a href="LE/Lampung Walk.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
         <div class="row g-0">
           <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Waterpark-Lampung-Walk.-Foto-Gmap-Rizki-Adhi-Wijaya.jpg" height="300px" width="450px" class="rounded-3 "></div>
           <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
@@ -86,7 +86,7 @@
           </div>
          </div>
       </a>
-      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+      <a href="LE/Puncak Mas.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
         <div class="row g-0">
           <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/puncak-mas-lampung.jpg" height="300px" width="450px" class="rounded-3 "></div>
           <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
@@ -96,7 +96,7 @@
           </div>
          </div>
       </a>
-      <a href="#" class="list-group-item list-group-item-action mx-0 " aria-current="true">
+      <a href="LE/Transmart Lampung.html" class="list-group-item list-group-item-action mx-0 " aria-current="true">
         <div class="row g-0">
           <div class="col-lg-4 text-white showcase-img mx-0 my-0"><img src="../Gambar/Transmart Lampung.jpeg" height="300px" width="450px" class="rounded-3 "></div>
           <div class="col-lg-6 my-auto showcase-text" style="padding-right: 25px;">
