--- a/Project_WebDev/pages/HD/Pulau Pahawang.html
+++ b/Project_WebDev/pages/HD/Pulau Pahawang.html
@@ -78,15 +78,11 @@
                         <a class="badge bg-secondary text-decoration-none link-light" href="../Hot_Destination.html">Destination</a>
                     </header>
                     <!-- Preview image figure-->
-                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Pulau-Pahawang-Lampung.jpg" alt="..." /></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Pulau-Pahawang-Lampung.jpg" width="700px" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-                        <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
-                        <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-                        <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
-                        <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-                        <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
+                        <p class="fs-5 mb-4">Pulau Pahawang adalah pulau yang terletak di Kecamatan Marga Punduh, Kabupaten Pesawaran, Lampung, Indonesia. Pulau ini memiliki sejuta pesona yang tidak kalah menarik dengan objek lainnya. Saat ini Pulau ini mulai sering dimasukkan dalam setiap penawaran paket wisata yang ada di Lampung. Paket wisata ke tempat ini menjamur, terbukti karena sudah sering ditawarkan oleh biro perjalanan wisata yang memanfaatkan pesona bawah lautnya sebagai daya tarik yang sering ditawarkan pada wisatawan negeri maupun mancanegara. </p>
+                        <p class="fs-5 mb-4">Pulau Pahawang memiliki sejuta pesona yang tidak kalah menarik dengan objek lainnya. Pulau ini sering dimasukkan dalam setiap penawaran paket wisata yang ada di Lampung. Paket wisata ke tempat ini menjamur, terbukti karena sudah sering ditawarkan oleh biro perjalanan wisata yang memanfaatkan pesona bawah lautnya sebagai daya tarik yang sering ditawarkan pada wisatawan negeri maupun mancanegara.</p>
                     </section>
                 </article>
             </div>
