--- a/Project_WebDev/pages/HD/Way Belerang.html
+++ b/Project_WebDev/pages/HD/Way Belerang.html
@@ -78,15 +78,11 @@
                         <a class="badge bg-secondary text-decoration-none link-light" href="../Hot_Destination.html">Destination</a>
                     </header>
                     <!-- Preview image figure-->
-                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Pemandian Air Panas.jpg" alt="..." /></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Pemandian Air Panas.jpg" width="700px" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">Science is an enterprise that should be cherished as an activity of the free human mind. Because it transforms who we are, how we live, and it gives us an understanding of our place in the universe.</p>
-                        <p class="fs-5 mb-4">The universe is large and old, and the ingredients for life as we know it are everywhere, so there's no reason to think that Earth would be unique in that regard. Whether of not the life became intelligent is a different question, and we'll see if we find that.</p>
-                        <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-                        <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
-                        <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-                        <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
+                        <p class="fs-5 mb-4">Way Belerang merupakan sebuah tempat pemandian air panas di lereng Gunung Rajabasa, Lampung Selatan, Provinsi Lampung. Suasana alamnya sangat sejuk dan alami yang dipenuhi dengan pepohonan besar. Di tempat ini pengunjung bisa melakukan relaksasi dengan berendam di air panas yang dipercaya bisa menyembuhkan penyakit rematik, gatal gatal, penyakit kulit lainnya. </p>
+                        <p class="fs-5 mb-4">Sesuai namanya, air panas di Way Belerang memang bercampur belerang. Oleh karena itu, warga yang datang ke sini bukan hanya untuk berwisata semata, banyak juga yang berbasah ria sambil melakukan terapi penyakit kulit, rematik dan sebagainya. Yang menarik, di way Belerang juga ada taman bermain untuk anak-anak, bahkan ada fasilitas kolam renang air tawar dan flying fox, balai pertemuan, arena bermain, kantin, delman lengkap dengan kudanya dan arena taman terbuka. </p>
                     </section>
                 </article>
             </div>
