--- a/Project_WebDev/pages/LE/Transmart Lampung.html
+++ b/Project_WebDev/pages/LE/Transmart Lampung.html
@@ -31,10 +31,10 @@
               <a class="nav-link fs-4" href="../Hot_Destination.html">Destination</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Local_Cuisine.html">Cuisine</a>
+                <a class="nav-link fs-4" href="../Local_Cuisine.html">Cuisine</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fs-4" href="../Local_Entertainment.html">Entertainment</a>
+                <a class="nav-link disabled fs-4 active rounded-3" style="background-color: #f1ff33;" aria-current="page" href="../Local_Entertainment.html">Entertainment</a>
             </li>
             <li class="nav-item">
               <a class="nav-link fs-4" href="../Lodging.html">Lodging</a>
@@ -73,23 +73,19 @@
                     <!-- Post header-->
                     <header class="mb-4">
                         <!-- Post title-->
-                        <h1 class="fw-bolder mb-1">Seruit</h1>>
+                        <h1 class="fw-bolder mb-1">Transmart Lampung</h1>>
                         <!-- Post categories-->
-                        <a class="badge bg-secondary text-decoration-none link-light" href="../Local_Cuisine.html">Cuisine</a>
+                        <a class="badge bg-secondary text-decoration-none link-light" href="../Local_Entertainment.html">Entertainment</a>
                     </header>
                     <!-- Preview image figure-->
-                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Seruit.jpg" width="700px" alt="..." /></figure>
+                    <figure class="mb-4"><img class="img-fluid rounded" src="../../Gambar/Transmart Lampung.jpeg" width="700px" alt="..." /></figure>
                     <!-- Post content-->
                     <section class="mb-5">
-                        <p class="fs-5 mb-4">Seruit, kuliner khas Lampung yang satu ini kurang populer dan jarang terdengar. Namun bagi masyarakat Lampung, Seruit termasuk kuliner yang cukup populer. Bahan baku utama dalam pembuatan Seruit adalah ikan, jenis ikannya tidak ditentukan. Tergantung selera masing-masing saja.</p>
-                        <p class="fs-5 mb-4">Namun biasanya masyarakat Lampung memakai ikan sungai, seperti ikan Baung, Layis, belide, dan lain-lain. Dan disajikan dengan lalapan. Sekilas tidak ada yang istimewa dari kuliner khas Lampung yang satu ini. Tapi hingga saat ini seruit masih dijadikan menu utama yang disajikan saat berkumpul, khususnya bagi suku Lampung Pepadun. </p>
-                        <p class="fs-5 mb-4">Sejak zaman dulu, masyarakat Lampung suka sekali berkumpul dengan keluarga, saudara, kerabat dan tetangga. Entah itu di acara adat, acara keagamaan, ataupun pernikahan. Dan disaat berkumpul itu, mereka biasanya menyantap makanan secara bersama-sama.
-                          Tradisi ini disebut dengan Nyeruit, dan makanan yang disantapnya adalah Seruit. Walaupun zaman sudah modern, namun kegiatan berkumpul ini masih dilakukan secara turun temurun hingga saat ini. Dan merupakan sarana untuk menjaga tali silaturahmi.</p>
-                        <h2 class="fw-bolder mb-4 mt-5">Proses pembuatan Seruit sangatlah mudah</h2>
-                        <p class="fs-5 mb-4">Kuliner khas Lampung ini memiliki bahan dasar ikan, dan biasanya ikan yang disajikan dalam Seruit diolah dengan cara digoreng atau dibakar. Selanjutnya ikan akan disantap dengan sambal terasi dan sambal tempoyak (olahan durian) atau sambal mangga.
-                          Masyarakat Lampung juga sering menambahkan lalapan dan petai, sebagai pelengkap hidangan Seruit. Perpaduan rasa dari sambal terasi dan sambal tempoyak atau sambal mangga, memberikan cita rasa pedas, asam, dan manis yang menambah kenikmatan saat menyantap Seruit.</p>
-                        <p class="fs-5 mb-4">Makanan ini kelihatan memang sangat sederhana kelihatannya, dan proses pembuatannya pun tidaklah rumit. Sebelum digoreng, ikan akan dilumuri dulu dengan bawang putih, garam, ketumbar, kunyit, dan jahe yang sudah dihaluskan. Setelah bumbu meresap, barulah ikan tersebut digoreng.
-                          Kalau ikannya dibakar, saat sudah setengah matang ikan akan dioles dengan kecap dan campuran bumbu yang dihaluskan tadi. kemudian dibakar lagi hingga matang. Kemudian ikan yang sudah dibakar ataupun digoreng, akan disajikan bersama dengan sepiring nasi hangat, dan aneka jenis lalapan yang diaduk jadi satu dengan sambal.</p>
+                        <p class="fs-5 mb-4">Mengusung konsep yang menjadi ciri khas Transmart yaitu dengan mengkombinasikan antara berbelanja dengan hiburan, menjadi daya tarik sendiri bagi masyarakat yang ada di Bandar Lampung. Kehadiran Transmart di Lampung ini adalah kabar gembira bagi para pecinta film di Bandar Lampung. Pasalnya saat ini tidak hanya ada di Mall Boemi Kedaton dan Mall Kartini saja, masyarakat juga bisa nonton di CGV Cinema Transmart Lampung.</p>
+                        <p class="fs-5 mb-4"> Transmart memiliki ciri khas yang sangat menonjol dibandingkan dengan Hypermart lainnya, di mana Transmart mengkombinasikan antara kegiatan berbelanja dengan, hiburan dan makanan. </p>
+                        <h2 class="fw-bolder mb-4 mt-5">Nikmati liburanmu di Trans Studio Mini Lampung!</h2>
+                        <p class="fs-5 mb-4">Transmart Lampung juga memiliki Trans Studio Mini Lampung, yang merupakan fasilitas hiburan dan permainan yang menjadi Ikon dari Transmart.</p>
+                        <p class="fs-5 mb-4">Aneka macam wahana yang disediakan di Trans Studio Mini Lampung diantaranya adalah Venture River, Bumper Car, Train Mini, New York Swing, Playground, Sky Rider, dan juga Crazy Cab Coaster dengan tarif wahana berkisar antara 30 ribu sampai dengan 50 ribu rupiah. </p>
                     </section>
                 </article>
             </div>
